tests/baselines/reference/project/jsFileCompilationSameNameDTsSpecifiedWithAllowJs/node/jsFileCompilationSameNameDTsSpecifiedWithAllowJs.errors.txt
SameNameDTsSpecifiedWithAllowJs/tsconfig.json(2,3): error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== SameNameDTsSpecifiedWithAllowJs/tsconfig.json (1 errors) ====
    {
      "compilerOptions": { "allowJs": true },
      ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
      "files": [ "a.d.ts" ]
    }
==== SameNameDTsSpecifiedWithAllowJs/a.d.ts (0 errors) ====
    declare var test: number;